--- a/dot_config/waybar/tokens/widget.css
+++ b/dot_config/waybar/tokens/widget.css
@@ -24,24 +24,9 @@
   padding: 0px 10px;
 }
 
-#custom-office {
-  color: #ff6f4c;
-  padding: 0px 10px;
-}
-
-#custom-obsidian {
-  color: #cba6f7;
-  padding: 0px 10px;
-}
-
 #custom-files {
   color: #f9e2af;
   padding: 0px 10px 0px 8px;
-}
-
-#custom-spotify {
-  color: #1db954;
-  padding: 0px 10px;
 }
 
 #custom-browser {
